# panos-dug

./: Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
src/: setup.py
src/worker/: app.py  fsm.py  models.py  paloalto.py  settings.py
worker/: app.py  fsm.py  paloalto.py  settings.py
worker/commands/: run.py  test.py
worker/services/: consumer.py  paloalto.py  panos.py
