[tool.poetry]
name = "panos-dug"
version = "0.1.0"
description = "User-ID integration service"
authors = ["Kevin C-Dubois <kcdubois@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
pydantic = "^1.9.1"
pan-os-python = "^1.7.3"
pika = "^1.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
